files/kubernetes_dashboard.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    name: dashboard
    namespace: monitoring
    spec:
      rules:
        - http:
            paths:
              - backend:
                serviceName: kubernetes-dashboard
                servicePort: 443
                path: /
